data/derived/comb/progs/unify/prog7427.ml.out
Characters 68-73:
  | Sine e' -> sin (3.142 * a)
                    ^^^^^
Error: This expression has type float but an expression was expected of type
         int
